less/header-style.less
/* ... */
@media screen and (max-width : 600px) and (orientation:landscape) {
    .feature .content-wrap {
        vertical-align: bottom;
    }
}

// Feature Image and Text Size on Tablet
@media only screen and (max-width : 960px) {
    .feature {
        .headline {
            font-size: bkscale(@font__feature-headline--font-size, .8);
            line-height: bkscale(@font__feature-headline--line-height, .8);
        }
        .strapline {
            font-size: bkscale(@font__feature-strapline--font-size, .9);
            line-height: bkscale(@font__feature-strapline--line-height, .9);
        }
    }
}




// -------------------
// Feature Full Height
// -------------------

.bk-pt-home [data-widget-type="feature"] {
    width: 100%;
}

.bk-pt-home [data-widget-type="feature"] + .hero-header {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    margin-bottom: 0;
    border-bottom: none;

    @media only screen and (min-width: 1025px) {
        height: 60vh;
    }

    min-height: 80%;

    .hero-logo {
        position: absolute;
        top: 40%;
        @media only screen and (max-width : 1024px) {
            top: 30%;
            bottom: inherit;
        }
        @media only screen and (max-width : 600px) {
            position: relative;
            top: 0;
        }
    }
    .company-link {
        color: @color__companyname--text;
        &:hover {
            color: @color-swatch3;
        }
    }
    .navigation-list--children {
        background-color: transparent;
    }
    .open .navigation-toggle:before {
        box-shadow: none;
    }
}

.bk-tpl-hidden[data-widget-type="feature"] + .hero-header {
    position: relative;
    height: auto;
    min-height: inherit;
    .flex-container {
        background-color: fade(@color-swatch6, 10%);
    }
    .hero-logo {
        position: relative;
        padding: 20px;
        @media @mobile {
            padding: 5px;
        }
    }
}

[data-widget-type="feature"] .widget-overlay {
    top: 200px !important;
    @media @mobile {
        top: 150px !important;
    }
}


// ----------
// Navigation
// ----------

.noscroll {
    position: fixed;
    width: 100%;
}

.extendednavigation .navigation-body {
    @media only screen and (min-width : 1024px) {
        margin: 10px 0;
    }
}

// Folder, adds arrow icon
.item-name--parent:after {
    display: inline-block;
    vertical-align: middle;
    content: "";
    margin-left: 4px;
    border: 5px solid transparent;
    border-top-color: @color__navigation--text;
    @media only screen and (max-width : 1024px) {
        border-top-color: @color__navigation--text;
    }
}
.item-name--parent:hover:after {
    border-top-color: @color__navigation--text--hover;
    @media only screen and (max-width : 1024px) {
        border-top-color: @color__navigation--text--hover;
    }
}

// Clears margin on ul
.navigation-list {
    margin: 0;
    width: auto;
}

// Sets background colour to navigation and dropdowns

.extendednavigation .navigation-list--children {
    left: inherit;
    right: 0;
    white-space: normal;
    border: 1px solid @color__body--background;
    background-color: @color__navigation--background;
    @media only screen and (max-width : 1024px) {
        border: none;
    }

    .navigation-item--child {
        @media only screen and (min-width: 1024px) {
            border-bottom: 1px solid @color__body--background;
            &:last-child {
                border-bottom: none;
            }
        }
    }
}

.extendednavigation__item-name.item-name {
    padding: 4px 12px;
    color: @color__navigation--text;
    font-size: @font__navigation--font-size;
    font-weight: @font__navigation--font-weight;
    line-height: @font__navigation--line-height;
    letter-spacing: @font__navigation--letter-spacing;
    &:hover {
        color: @color__navigation--text--hover;
        text-decoration: none;
    }
    @media only screen and (min-width: 600px) and (max-width: 1024px) {
        font-size: 20px;
        line-height: 35px;
    }
    @media only screen and (max-width : 600px) {
        padding: 8px 0;
    }
}

.navigation-item.selected .item-name {
    color: @color__navigation--text--selected;
    text-decoration: none;
}




// -----------------------------
// Nav in Tablet & Mobile
// -----------------------------

.noscroll .hero-header .flex-container {
    padding: 0;
}

[data-widget-type="extendednavigation"] {
    @media only screen and (max-width : 1024px) {
        position: static;
    }
}

.navigation-list {
    @media only screen and (max-width : 1024px) {
        position: absolute;
        left: 0;
        right: 0;
        top: 0;
        height: 100vh;
        width: 100%;
        overflow: hidden;
        .transform(@y:-100%, @x:0);
        .transition( all, 1s, ease );

        z-index: 10002;

        padding: 150px 100px;
        background-color: @color__navigation--background;

        // Allows scrolling on mobile
        &.open {
            overflow: auto;
        }
    }
    @media only screen and (max-width : 600px) {
        padding: 65px 0 0 0;
    }
}

.navigation-list {
    @media only screen and (min-width: 1024px) {
        transition-duration: 0.4s;
    }
}


// Hides navigation until toggled
.navigation-list {
    &.open {
        display: block;
    }
}

.navigation-list.open .navigation-item:hover .navigation-list--children {
    height: auto;
    padding: 0;
    position: relative;
    opacity: 1;
    visibility: visible;
    background-color: transparent;
    @media only screen and (max-width : 1024px) {
        background-color: lighten(@color__navigation--background, 5%);
    }
    .transform(@x:0, @y:0);
}
/* ... */

